Comment out WIP hooks for now

--- a/VanillaEditHelper.csproj
+++ b/VanillaEditHelper.csproj
@@ -64,4 +64,8 @@
         <PathMap>$(MSBuildProjectDirectory)=VanillaEditHelper\</PathMap>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+    </PropertyGroup>
+
 </Project>
